--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,13 +1,13 @@
 footer {
     height: 56px; 
-    background-color: var(--color-text-primary);
+    background-color: var(--color-text-secundary);
     display: flex;
     justify-content: center;
     margin-top: 40px;
 }
 
 footer p {
-    color: var(--color-text-secundary);
+    color: var(--color-text-primary);
     font-weight: 700;
     margin-top: 30px;
 }
