--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,6 +4,6 @@ header {
     align-items: center;
     width: 100%;
     height: 56px;
-    background-color: #fff;
+    background-color: var(--color-text-secundary);
 }
 
