add new background input

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 :root {
   --background-color: #1c1917;
-  --background-input: #6b7280;
+  --background-input: #d1d5db;
   --color-text-primary: #fff;
   --color-text-secundary: #000;
 }
